[project]
name = "multi-agent-research-assistant"
version = "0.1.0"
description = "A multi-agent research assistant built with LangGraph, Gemini Flash, and Tavily"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # LangGraph & LangChain core
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",

    # Tavily search
    "tavily-python>=0.5.0",

    # LangSmith observability
    "langsmith>=0.2.0",

    # API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",

    # Web scraping
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",

    # Persistence
    "aiosqlite>=0.20.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
